cambio en menu 1

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- LESS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-     <link rel="stylesheet/less" type="text/css" href="less/color.less">
+    <link rel="stylesheet/less" type="text/css" href="less/color.less">
     <link rel="stylesheet/less" type="text/css" href="less/fonts.less">
     <script src="less/less.min.js"></script>
 
@@ -47,7 +47,6 @@
 </head>
 
 <body>
-
 
 
     <!-- Preloader
@@ -129,69 +128,8 @@
 
     </section>
 
-    <header class="masthead ">
-      <div class="container">
-        <div class="row">
-          <!-- <article class="col-md-3">
-            <a href="index.html"><img alt="" title="" class="main-logo " src="images/logo.png"></a>
-          </article> -->
-          <article class="col-md-6 text-left no-pad">
-            <nav class="mastnav ">
+    <header class="masthead" id="header-menu">
 
-                  <ul class="main-menu ">
-                    <li>
-                        <a class="main-link font1 sub-menu-trigger activelink" href="#">Home</a>
-                        <div class="sub-menu font1">
-                            <a href="index.html">Portfolio</a>
-                            <a href="index02.html">Slider</a>
-                        </div>
-                    </li>
-                    <li>
-                        <a class="main-link font1 sub-menu-trigger" href="#">Works</a>
-                        <div class="sub-menu font1">
-                            <a href="works.html">2 col</a>
-                            <a href="works02.html">3 col</a>
-                            <a href="works03.html">4 col</a>
-                        </div>
-                    </li>
-                    <li>
-                        <a class="main-link font1 sub-menu-trigger" href="#">Pages</a>
-                        <div class="sub-menu font1">
-                            <a href="about01.html">Studio</a>
-                            <a href="about02.html">Personal</a>
-                            <a href="elements.html">Elements</a>
-                            <a href="news.html">News List</a>
-                            <a href="post.html">News Post</a>
-                        </div>
-                    </li>
-                    <li>
-
-                        <a class="main-link font1 sub-menu-trigger" href="#">Project</a>
-                        <div class="sub-menu font1">
-                            <a href="project01.html">Slider</a>
-                            <a href="project02.html">Video</a>
-                            <a href="project03.html">Parallax</a>
-                        </div>
-                    </li>
-                    <li><a class="main-link font1" href="contact.html">Say Hello</a></li>
-                  </ul>
-            </nav>
-          </article>
-          <article class="col-md-6 no-pad">
-              <!--works filter panel :starts -->
-                <div class="works-filter-wrap">
-                    <ul class="works-filter  text-right clearfix font2">
-                        <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li><li><a href="#" data-filter=".branding"><span>Branding</span></a></li>
-                        <li><a href="#" data-filter=".graphics"><span>Graphics</span></a></li>
-                        <li><a href="#" data-filter=".logos"><span>Logos</span></a></li>
-                        <li><a href="#" data-filter=".ui"><span>UI</span></a></li>
-                        <li><a href="#" data-filter=".web"><span>Web</span></a></li>
-                    </ul>
-              </div>
-            <!-- works filter panel :ends -->
-          </article>
-        </div>
-      </div>
     </header>
     <!-- end : masthead -->
 
@@ -419,7 +357,16 @@
     <script src="javascripts/libs/common.js"></script>
     <script src="elements/js/elements.js"></script>
     <script src="javascripts/custom/main.js"></script>
+    <script src="javascripts/custom/functionCargaAjax.js"></script>
+    <script>
+        var request = "header.html";
+        var cadena = "cabecera-menu";
+        var metodo = function (datos) {
+            $("#header-menu").html(datos);
+        };
 
+        f_ajax(request, cadena, metodo);
+    </script>
 </body>
 
 </html>
