--- a/index.html
+++ b/index.html
@@ -65,43 +65,43 @@
 
     <!-- Mobile Only Navigation
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <nav class="mobile-nav ">
-                <ul class="slimmenu font1">
-                  <li>
-                      <a class="sub-collapser" href="">home</a>
-                      <ul>
-                        <li><a href="index.html">portfolio</a></li>
-                        <li><a href="index02.html">slider</a></li>
-                      </ul>
-                  </li>
-                  <li>
-                      <a class="sub-collapser" href="">portfolio</a>
-                      <ul>
-                          <li><a href="works.html">2 col</a></li>
-                          <li><a href="works02.html">3 col</a></li>
-                          <li><a href="works03.html">4 col</a></li>
-                      </ul>
-                  </li>
-                  <li>
-                      <a class="sub-collapser" href="">pages</a>
-                      <ul>
-                        <li><a href="about01.html">studio</a></li>
-                        <li><a href="about02.html">personal</a></li>
-                        <li><a href="elements.html">elements</a></li>
-                        <li><a href="news.html">news list</a></li>
-                        <li><a href="post.html">news post</a></li>
-                      </ul>
-                  </li>
-                  <li>
-                      <a class="sub-collapser" href="">project</a>
-                      <ul>
-                        <li><a href="project01.html">slider project</a></li>
-                        <li><a href="project02.html">video project</a></li>
-                        <li><a href="project03.html">parallax project</a></li>
-                      </ul>
-                  </li>
-                  <li><a href="contact.html">say hello</a></li>
+    <nav class="mobile-nav " id="headermovil">
+        <ul class="slimmenu font1">
+            <li>
+                <a class="sub-collapser" href="">home</a>
+                <ul>
+                    <li><a href="index.html">portfolio</a></li>
+                    <li><a href="index02.html">slider</a></li>
                 </ul>
+            </li>
+            <li>
+                <a class="sub-collapser" href="">portfolio</a>
+                <ul>
+                    <li><a href="works.html">2 col</a></li>
+                    <li><a href="works02.html">3 col</a></li>
+                    <li><a href="works03.html">4 col</a></li>
+                </ul>
+            </li>
+            <li>
+                <a class="sub-collapser" href="">pages</a>
+                <ul>
+                    <li><a href="about01.html">studio</a></li>
+                    <li><a href="about02.html">personal</a></li>
+                    <li><a href="elements.html">elements</a></li>
+                    <li><a href="news.html">news list</a></li>
+                    <li><a href="post.html">news post</a></li>
+                </ul>
+            </li>
+            <li>
+                <a class="sub-collapser" href="">project</a>
+                <ul>
+                    <li><a href="project01.html">slider project</a></li>
+                    <li><a href="project02.html">video project</a></li>
+                    <li><a href="project03.html">parallax project</a></li>
+                </ul>
+            </li>
+            <li><a href="contact.html">say hello</a></li>
+        </ul>
     </nav>
     <!-- mobile only navigation : ends -->
 
@@ -129,7 +129,67 @@
     </section>
 
     <header class="masthead" id="header-menu">
+        <div class="container">
+            <div class="row">
+                <!-- <article class="col-md-3">
+                  <a href="index.html"><img alt="" title="" class="main-logo " src="images/logo.png"></a>
+                </article> -->
+                <article class="col-md-6 text-left no-pad">
+                    <nav class="mastnav ">
+                        <ul class="main-menu ">
+                            <li>
+                                <a class="main-link font1 sub-menu-trigger activelink" href="#">Home</a>
+                                <div class="sub-menu font1">
+                                    <a href="index.html">Portfolio</a>
+                                    <a href="index02.html">Slider</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a class="main-link font1 sub-menu-trigger" href="#">Works</a>
+                                <div class="sub-menu font1">
+                                    <a href="works.html">2 col</a>
+                                    <a href="works02.html">3 col</a>
+                                    <a href="works03.html">4 col</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a class="main-link font1 sub-menu-trigger" href="#">Pages</a>
+                                <div class="sub-menu font1">
+                                    <a href="about01.html">Studio</a>
+                                    <a href="about02.html">Personal</a>
+                                    <a href="elements.html">Elements</a>
+                                    <a href="news.html">News List</a>
+                                    <a href="post.html">News Post</a>
+                                </div>
+                            </li>
+                            <li>
 
+                                <a class="main-link font1 sub-menu-trigger" href="#">Project</a>
+                                <div class="sub-menu font1">
+                                    <a href="project01.html">Slider</a>
+                                    <a href="project02.html">Video</a>
+                                    <a href="project03.html">Parallax</a>
+                                </div>
+                            </li>
+                            <li><a class="main-link font1" href="contact.html">Say Hello</a></li>
+                        </ul>
+                    </nav>
+                </article>
+                <article class="col-md-6 no-pad">
+                    <!--works filter panel :starts -->
+                    <div class="works-filter-wrap">
+                        <ul class="works-filter  text-right clearfix font2">
+                            <li><a id="all" href="#" data-filter="*" class="active"><span>All</span></a></li><li><a href="#" data-filter=".branding"><span>Branding</span></a></li>
+                            <li><a href="#" data-filter=".graphics"><span>Graphics</span></a></li>
+                            <li><a href="#" data-filter=".logos"><span>Logos</span></a></li>
+                            <li><a href="#" data-filter=".ui"><span>UI</span></a></li>
+                            <li><a href="#" data-filter=".web"><span>Web</span></a></li>
+                        </ul>
+                    </div>
+                    <!-- works filter panel :ends -->
+                </article>
+            </div>
+        </div>
     </header>
     <!-- end : masthead -->
 
@@ -357,16 +417,7 @@
     <script src="javascripts/libs/common.js"></script>
     <script src="elements/js/elements.js"></script>
     <script src="javascripts/custom/main.js"></script>
-    <script src="javascripts/custom/functionCargaAjax.js"></script>
-    <script>
-        var request = "header.html";
-        var cadena = "cabecera-menu";
-        var metodo = function (datos) {
-            $("#header-menu").html(datos);
-        };
 
-        f_ajax(request, cadena, metodo);
-    </script>
 </body>
 
 </html>
